Homepage updation and version 1.0 completed

--- a/Academic_courses.html
+++ b/Academic_courses.html
@@ -12,6 +12,7 @@
         <link href="css/jcarousel.css" rel="stylesheet" />
         <link href="css/flexslider.css" rel="stylesheet" />
         <link href="css/style.css" rel="stylesheet" />
+        <link rel="icon" href="img/pie.png" type="image/x-icon">
 
         <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
         <!--[if lt IE 9]>
@@ -20,7 +21,7 @@
 
     </head>
     <body>
-         <div class="container">
+        <div class="container">
             <div class="row" style="background-color: green;">
                 <div class="col-md-9 col-sm-6 top-reponsive ">                      
                     <span style="color: wheat">Contact No:</span><a style="color: white"  href="tel:+919956176774"> +91- 9956176774</a> ,
@@ -76,22 +77,41 @@
 
                         <div class="row">
                             <div class="col-lg-12">
-                                <div class=""><h3>Courses We Offer</h3><span class="clear spacer_responsive_hide_mobile " style="height:13px;display:block;"></span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores quae porro consequatur aliquam, incidunt eius magni provident, doloribus omnis minus temporibus perferendis nesciunt quam repellendus nulla nemo ipsum odit corrupti consequuntur possimus, vero mollitia velit ad consectetur. Alias, laborum excepturi nihil autem nemo numquam, ipsa architecto non, magni consequuntur quam.</div>
+                                <div class=""><h3>Courses We Offer</h3><span class="clear spacer_responsive_hide_mobile " style="height:13px;display:block;"></span>Prayas Institute of Education provides coaching and mentoring of various courses like for Academic Classes for VI to XII for both Hindi and English Medium, Engineering and Medical Entrance Examinations, Banking, SSC, UPSSSC, NET etc.</div>
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-md-6">
                                 <div class="textbox clour1">
                                     <h3>Hindi Medium(6 To 12)</h3>
-                                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Praesent vest sit amet, consec ibulum molestie lacus. Aenean nonummy hendrerit mauris. Phasellus porta.</p>
+                                    <p>● Mathematics
+                                        ●Physics
+                                        ●Chemistry
+                                        ●Biology
+                                        ●Computer
+                                        ●English
+                                        ●Hindi
+                                        ●Social Science
+                                        ●Civics
+                                        ●Economics</p>
                                 </div> </div>
                             <div class="col-md-6">
                                 <div class="textbox clour3">
                                     <h3>English Medium(6 To 12)</h3>
-                                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Praesent vest sit amet, consec ibulum molestie lacus. Aenean nonummy hendrerit mauris. Phasellus porta.</p>
+                                    <p>● Mathematics
+                                        ●Physics
+                                        ●Chemistry
+                                        ●Biology
+                                        ●Computer
+                                        ●English
+                                        ●Hindi
+                                        ●Social Science
+                                        ●Civics
+                                        ●Economics</p>
                                 </div> </div>
                         </div>
-                    </section>	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores quae porro consequatur aliquam, incidunt eius magni provident, doloribus omnis minus temporibus perferendis nesciunt quam repellendus nulla nemo ipsum odit corrupti consequuntur possimus</p> </br>  
+                    </section>
+                    </br>  
                 </div>
             </section>
         <footer><b>
