--- a/contact.html
+++ b/contact.html
@@ -12,6 +12,7 @@
         <link href="css/jcarousel.css" rel="stylesheet" />
         <link href="css/flexslider.css" rel="stylesheet" />
         <link href="css/style.css" rel="stylesheet" />
+        <link rel="icon" href="img/pie.png" type="image/x-icon">
     </head>
     <body>
          <div class="container">
@@ -90,7 +91,8 @@
                                     <strong>Prayas Institute Of Education<br>
                                         A/49, Near Railway Crossing,<br>
                                         Phardhan, Lakhimpur Kheri</strong><br>
-                                    Mobile: <a href="tel:+919140779702">+91-9140779702</a><br>
+                                    Mobile:<a href="tel:+919956176774"> +91- 9956176774</a> ,
+                                        <a href="tel:+919140779702"> +91-9140779702</a><br>
                                     E-mail: <a href="mailto:prayasinstitute.in@gmail.com">prayasinstitute.in@gmail.com</a><br>
                                 </address>
                             </div> 
