--- a/index.html
+++ b/index.html
@@ -191,42 +191,59 @@
 
                     <div class="row">
                         <div class="col-lg-12">
-                            <div class="aligncenter"><h2 class="aligncenter">Courses We Offer</h1><span class="clear spacer_responsive_hide_mobile " style="height:13px;display:block;"></span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores quae porro consequatur aliquam, incidunt eius magni provident, doloribus omnis minus temporibus perferendis nesciunt quam repellendus nulla nemo ipsum odit corrupti consequuntur possimus, vero mollitia velit ad consectetur. Alias, laborum excepturi nihil autem nemo numquam, ipsa architecto non, magni consequuntur quam.</div>
+                            <div class="aligncenter"><h2 class="aligncenter">Courses We Offer</h1><span class="clear spacer_responsive_hide_mobile " style="height:13px;display:block;"></span>Prayas Institute of Education provides coaching and mentoring of various courses like for Academic Classes for VI to XII for both Hindi and English Medium, Engineering and Medical Entrance Examinations, Banking, SSC, UPSSSC, NET etc.</div>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-md-4">
                             <div class="textbox clour1">
-                                <h3>Heading Course</h3>
-                                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Praesent vest sit amet, consec ibulum molestie lacus. Aenean nonummy hendrerit mauris. Phasellus porta.</p>
-                            </div> </div>
+                                <h3>VI to XII Academic Classes (Hindi Medium)</h3>
+                            </div>
+                        </div>
                         <div class="col-md-4">
                             <div class="textbox clour2">
-                                <h3>Heading Course</h3>
-                                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Praesent vest sit amet, consec ibulum molestie lacus. Aenean nonummy hendrerit mauris. Phasellus porta.</p>
-                            </div> </div>
+                                <h3>VI to XII Academic Classes(English Medium)</h3>
+                            </div> 
+                        </div>
                         <div class="col-md-4">
                             <div class="textbox clour3">
-                                <h3>Heading Course</h3>
-                                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Praesent vest sit amet, consec ibulum molestie lacus. Aenean nonummy hendrerit mauris. Phasellus porta.</p>
-                            </div> </div>
+                                <h3>IIT-JEE/UPSEE/Engineering Entrance Examinations</h3>
+                            </div>
+                        </div>
                     </div>
                     <div class="row">
                         <div class="col-md-4">
                             <div class="textbox clour4">
-                                <h3>Heading Course</h3>
-                                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Praesent vest sit amet, consec ibulum molestie lacus. Aenean nonummy hendrerit mauris. Phasellus porta.</p>
-                            </div> </div>
+                                <h3>NEET/AIIMS</h3>
+                            </div> 
+                        </div>
                         <div class="col-md-4">
                             <div class="textbox clour5">
-                                <h3>Heading Course</h3>
-                                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Praesent vest sit amet, consec ibulum molestie lacus. Aenean nonummy hendrerit mauris. Phasellus porta.</p>
-                            </div> </div>
+                                <h3>Banking/SSC</h3>
+                            </div> 
+                        </div>
                         <div class="col-md-4">
                             <div class="textbox clour6">
-                                <h3>Heading Course</h3>
-                                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Praesent vest sit amet, consec ibulum molestie lacus. Aenean nonummy hendrerit mauris. Phasellus porta.</p>
-                            </div> </div>
+                                <h3>UPSSSC</h3>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-4">
+                            <div class="textbox clour2">
+                                <h3>NET</h3>
+                            </div> 
+                        </div>
+                        <div class="col-md-4">
+                            <div class="textbox clour6">
+                                <h3>TET/CTET</h3>
+                            </div> 
+                        </div>
+                        <div class="col-md-4">
+                            <div class="textbox clour4">
+                                <h3>Railway</h3>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </section>
