--- a/privacy.html
+++ b/privacy.html
@@ -12,6 +12,7 @@
         <link href="css/jcarousel.css" rel="stylesheet" />
         <link href="css/flexslider.css" rel="stylesheet" />
         <link href="css/style.css" rel="stylesheet" />
+        <link rel="icon" href="img/pie.png" type="image/x-icon">
     </head>
     <body>
          <div class="container">
